--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
+test:
+  override:
+    - lein with-profile dev,circle-ci midje:
+        timeout: 60
+
 machine:
   environment:
     TEST_DB_USER: "ubuntu"
