Stop circle mysql.

--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ dependencies:
     - echo '{:user {:plugins [[lein-voom "0.1.0-20160311_203101-g259fbfc"]]}}' > ~/.lein/profiles.clj
     - lein voom build-deps
   pre:
+    - sudo stop mysql
     - docker run -e MYSQL_ROOT_PASSWORD="password" -p 3306:3306 -d mysql:latest
 
 test:
