--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ dependencies:
     - sudo stop mysql
     - sudo /etc/init.d/postgresql stop
     - docker run -e MYSQL_ROOT_PASSWORD="password" -p 3306:3306 -d mysql:latest
-    - docker run -e POSTGRES_PASSWORD=password -e POSTGRES_USER=postgresql -e POSTGRES_DB=onyx_input_test -p 5432:5432 library/postgres
+    - docker run -e POSTGRES_PASSWORD=password -e POSTGRES_USER=postgresql -e POSTGRES_DB=onyx_input_test -p 5432:5432 -d library/postgres
 
 test:
   override:
